tree-sitter-jabber/test/corpus/struct_declarations.txt
==========================
empty struct declarations
==========================

pub struct Singleton {}

-------------------------

(source_file
  decl: (struct_decl
    visibility: (access_spec)
    name: (ident)
    fields: (struct_fields)))


=====================
public struct fields
=====================

struct Int4 {
  pub _0: int,
  pub _1: int,
  pub _2: int,
  pub _3: int,
}

----------------------------

(source_file
  decl: (struct_decl
    name: (ident)
    fields: (struct_fields
      (struct_field
        visibility: (access_spec)
        name: (ident)
        type: (primitive_type))
      (struct_field
        visibility: (access_spec)
        name: (ident)
        type: (primitive_type))
      (struct_field
        visibility: (access_spec)
        name: (ident)
        type: (primitive_type))
      (struct_field
        visibility: (access_spec)
        name: (ident)
        type: (primitive_type)))))

============================
generic struct declarations
============================

struct Triplet[A, B, C] {
  a: A,
  b: B,
  c: C,
}

---------------------------------

(source_file
  decl: (struct_decl
    name: (ident)
    params: (generic_params
      (ident)
      (ident)
      (ident))
    fields: (struct_fields
      (struct_field
        name: (ident)
        type: (ident))
      (struct_field
        name: (ident)
        type: (ident))
      (struct_field
        name: (ident)
        type: (ident)))))

======================
mutable struct fields
======================

struct Mut {
  mutable foo : A,
  pub mutable bar : B
}

------------------------

(source_file
  decl: (struct_decl
    name: (ident)
    fields: (struct_fields
      (struct_field
        mutable: (mutable)
        name: (ident)
        type: (ident))
      (struct_field
        visibility: (access_spec)
        mutable: (mutable)
        name: (ident)
        type: (ident)))))
