tree-sitter-jabber/test/corpus/use_declarations.txt
============
named items
============

use std.foo.bar

----------------------------

(source_file
  declaration: (declaration
    body: (use_decl
      item: (path
        root: (path
          root: (ident)
          name: (ident))
        name: (ident)))))

=====================
aliased items
=====================

use std.baz as _alias

----------------------------

(source_file
  declaration: (declaration
    body: (use_decl
      item: (alias_item
        item: (path
          root: (ident)
          name: (ident))
        alias: (ident)))))

===========
item trees
===========

use std.tree.{
  some_item,
  aliased_item as new_name,
  Enum.Constr,
}

----------------------------

(source_file
  declaration: (declaration
    body: (use_decl
      item: (tree_item
        root: (path
          root: (ident)
          name: (ident))
        items: (tree_item_children
          (ident)
          (alias_item
            item: (ident)
            alias: (ident))
          (path
            root: (ident)
            name: (ident)))))))

=====================
pub use declarations
=====================

pub use foo.Foo

---------------------------------

(source_file
  declaration: (declaration
    visibility: (access_spec)
    body: (use_decl
      item: (path
        root: (ident)
        name: (ident)))))
